--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,41 @@
-name: Build Yusr Lite APK
-on: [push, pull_request, workflow_dispatch]
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+[app]
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python_version: '3.11'
+# (title) اسم التطبيق اللي هيظهر للمستخدم
+title = Yusr Lite
 
-      - name: Install Buildozer and Dependencies
-        run: |
-          sudo apt update
-          # غيرنا libtinfo5 لـ libtinfo6 هنا عشان يرضى يشتغل
-          sudo apt install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo6 cmake libffi-dev libssl-dev
-          pip install --user --upgrade buildozer Cython==0.29.33
+# (package.name) اسم الحزمة (بدون مسافات)
+package.name = yusrlite
 
-      - name: Build APK with Buildozer
-        run: |
-          # السطر ده بيوافق على الرخص وبيبدأ البناء
-          yes | buildozer -v android debug
-        
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: Yusr-Lite-Package
-          path: bin/*.apk
+# (package.domain) النطاق الخاص بك
+package.domain = org.yusr.lite
+
+# (source.dir) مكان الكود (النقطة تعني المجلد الحالي)
+source.dir = .
+
+# (source.include_exts) الملفات اللي هتدخل في الـ APK
+source.include_exts = py,png,jpg,ttf,json,db
+
+# (version) رقم الإصدار (اللي كان عامل المشكلة!)
+version = 0.1
+
+# (requirements) المكتبات المطلوبة للتشغيل
+requirements = python3,kivy==2.3.0,arabic-reshaper,python-bidi
+
+# (orientation) وضع الشاشة
+orientation = portrait
+
+# (fullscreen) ملء الشاشة
+fullscreen = 1
+
+# --- إعدادات الأندرويد الضرورية ---
+android.api = 33
+android.minapi = 21
+android.ndk = 25b
+android.archs = arm64-v8a, armeabi-v7a
+android.accept_sdk_license = True
+
+# (log_level) عشان نشوف التفاصيل لو حصلت مشكلة
+log_level = 2
+
+[buildozer]
+warn_on_root = 1
