--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,29 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04 # تحديد نسخة مستقرة من لينكس
+
     steps:
       - uses: actions/checkout@v4
-      - name: Build with Buildozer
-        uses: ArtemSerebryakov/buildozer-action@v1
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          command: buildozer android debug
+          python-version: '3.11'
+
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-pip build-essential git python3 python3-dev ffmpeg libgstreamer1.0-dev libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev
+          sudo apt-get install -y libsqlite3-dev sqlite3 bzip2 libbz2-dev libssl-dev openssl libgdbm-dev libgdbm-compat-dev liblzma-dev libreadline-dev libncursesw5-dev libffi-dev uuid-dev
+          pip install --upgrade pip
+          pip install buildozer cython==0.29.33 kivy  # تحديد نسخ مستقرة
+
+      - name: Build with Buildozer
+        run: |
+          yes | buildozer android debug
+          # "yes |" عشان يوافق أوتوماتيك على شروط الـ SDK والـ NDK
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
