--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,10 @@ jobs:
 
       - name: Build with Buildozer
         run: |
+          # قبول التراخيص يدوياً قبل البدء
+          yes | sdkmanager --licenses || true
+          # تشغيل البناء مع الموافقة التلقائية
           yes | buildozer android debug
-          # "yes |" عشان يوافق أوتوماتيك على شروط الـ SDK والـ NDK
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
