--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,15 @@ jobs:
 
       - name: Build with Buildozer
         run: |
-          # قبول التراخيص يدوياً قبل البدء
-          yes | sdkmanager --licenses || true
-          # تشغيل البناء مع الموافقة التلقائية
-          yes | buildozer android debug
+          # 1. مسح أي بقايا بناء قديم (لو موجودة)
+          rm -rf .buildozer/
+          
+          # 2. إجبار النظام على قبول تراخيص أندرويد
+          mkdir -p ~/.android && touch ~/.android/repositories.cfg
+          yes | buildozer android debug || true
+          
+          # 3. التشغيل الفعلي مع تخطي مشاكل التفاعل
+          buildozer android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
