--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,8 @@ jobs:
           sudo apt-get install -y python3-pip build-essential git python3 python3-dev ffmpeg libgstreamer1.0-dev libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev portaudio19-dev libportaudio2
           sudo apt-get install -y libsqlite3-dev sqlite3 bzip2 libbz2-dev libssl-dev openssl libgdbm-dev libgdbm-compat-dev liblzma-dev libreadline-dev libncursesw5-dev libffi-dev uuid-dev autopoint libltdl-dev
           pip install --upgrade pip
-          pip install setuptools wheel Cython==0.29.33 buildozer kivy
+          # تحديث Cython ليتوافق مع Kivy 2.3.1
+          pip install setuptools wheel "Cython>=3.0.0" buildozer kivy
 
       - name: Build with Buildozer
         run: |
@@ -30,8 +31,8 @@ jobs:
             cp main_mobile.py main.py
           fi
           
-          # 2. البناء مع الموافقة التلقائية على التراخيص
-          yes | buildozer -v android debug
+          # 2. البناء (تم تفعيل قبول التراخيص في buildozer.spec)
+          buildozer -v android debug
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
